# aifed

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix
crates/aifed/: Cargo.toml  README.md
crates/aifed-common/: Cargo.toml  README.md
crates/aifed-common/src/: config.rs  default-config.toml  error.rs  lib.rs  paths.rs  socket.rs  types.rs  workspace.rs
crates/aifed-daemon/: Cargo.toml  README.md
crates/aifed-daemon-client/: Cargo.toml  README.md
crates/aifed-daemon-client/src/: lib.rs
crates/aifed-daemon/src/: args.rs  detection.rs  error.rs  idle.rs  main.rs  socket.rs
crates/aifed-daemon/src/history/: entry.rs  manager.rs  mod.rs  tests.rs
crates/aifed-daemon/src/languages/: mod.rs  rust.rs
crates/aifed-daemon/src/lsp/: client.rs  manager.rs  mock.rs  mod.rs  progress.rs  protocol.rs  tests.rs
crates/aifed-daemon/src/server/: converters.rs  mod.rs  router.rs  state.rs  types.rs
crates/aifed-daemon/src/server/handlers/: clipboard.rs  daemon.rs  history.rs  management.rs  mod.rs  operations.rs
crates/aifed-daemon/tests/: daemon_management.rs  lsp_operations.rs
crates/aifed-daemon/tests/common/: mod.rs
crates/aifed-daemon/tests/fixtures/sample-rust-crate/: Cargo.toml
crates/aifed/src/: args.rs  batch.rs  cli.rs  diff.rs  error.rs  escape.rs  file.rs  hash.rs  indent.rs  language.rs  locator.rs  main.rs  output.rs  scanner.rs  skill.md  text_edit.rs
crates/aifed/src/commands/: clipboard.rs  copy.rs  daemon.rs  edit.rs  history.rs  info.rs  lsp.rs  mod.rs  outline.rs  paste.rs  read.rs  redo.rs  undo.rs
crates/aifed/src/edit_view/: mod.rs  model.rs  render.rs
crates/aifed/src/outline/: c.rs  cpp.rs  ecmascript.rs  go.rs  helpers.rs  javascript.rs  markdown.rs  mod.rs  model.rs  python.rs  render.rs  rust.rs  spec.rs  test_support.rs  typescript.rs  walker.rs
docs/: api-design.md  cli-design-notes.md  development-guide.md  installation-guide.md
docs/agent-action-wizards/: README.md  aifed-cli-test-walkthrough.md
docs/design-notes/: README.md  architecture.md  batch-atomicity.md  edit-model.md  error-handling.md  filepath-locator.md  locator.md  open-questions.md  operator-evolution.md  philosophy.md
docs/reference/: README.md  cli-overview.md  clipboard.md  configuration.md  edit-commands.md  file-operations.md  history.md  locator.md  lsp.md  read-commands.md  utilities.md
nix/: common.nix  packages.nix  tarball.nix
nix/dev/: checks.nix  shell.nix
nix/home-manager-modules/: README.md  aifed.nix  default.nix
