[workspace]
members = [
  "crates/aifed",
]

resolver = "3"

[workspace.package]
version = "0.0.0"

[workspace.metadata.crane]
name = "nix-rust-workspace"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
anyhow = "1"
