[workspace]
members = [
  "crates/aifed",
  "crates/aifed-daemon",
  "crates/aifed-daemon-client",
  "crates/aifed-common",
]

resolver = "3"

[workspace.package]
version = "0.0.0"

[workspace.metadata.crane]
name = "nix-rust-workspace"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
anyhow = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
  "macros",
  "signal",
] }
lsp-types = "0.95"
async-trait = "0.1"
serial_test = "3"
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "json",
  "http1",
] }
tower = "0.5"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
libc = "0.2"
logroller = "0.1"
# Test dependencies for integration tests
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = { version = "0.9", features = ["client"] }
http-body-util = "0.1"
tower-service = "0.3"
time = { version = "0.3", features = [
  "serde",
  "serde-well-known",
  "formatting",
  "parsing",
  "local-offset",
  "macros",
] }
