[workspace]
members = [
  "crates/aifed",
  "crates/aifed-daemon",
  "crates/aifed-daemon-client",
  "crates/aifed-common",
]

resolver = "3"

[workspace.package]
version = "0.0.0"                                         # placeholder; each crate carries its own independent version
edition = "2024"
rust-version = "1.89.0"
license = "MIT"
repository = "https://github.com/ImitationGameLabs/aifed"

[workspace.metadata.crane]
name = "nix-rust-workspace"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
anyhow = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "process",
  "io-util",
  "sync",
  "time",
  "macros",
  "signal",
] }
lsp-types = "0.95"
async-trait = "0.1"
serial_test = "3"
axum = { version = "0.8", default-features = false, features = [
  "tokio",
  "json",
  "http1",
  "query",
] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
logroller = "0.1"
# Test dependencies for integration tests
hyper = "1"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
hyperlocal = { version = "0.9", features = ["client"] }
http-body-util = "0.1"
tower-service = "0.3"
tower = "0.5"
time = { version = "0.3", features = [
  "serde",
  "serde-well-known",
  "formatting",
  "parsing",
  "local-offset",
  "macros",
] }
json-escape = "0.3"
content_inspector = "0.2"
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-md = "0.5"
tree-sitter-go = "0.25"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"

aifed-common = { version = "0.1.0", path = "crates/aifed-common" }
aifed-daemon = { version = "0.1.0", path = "crates/aifed-daemon" }
aifed-daemon-client = { version = "0.1.0", path = "crates/aifed-daemon-client" }
