[package]
name = "aifed-daemon-client"
description = "Rust client for the aifed daemon IPC protocol (HTTP over TCP loopback)"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["lsp", "ipc", "client", "http"]
categories = ["development-tools", "network-programming"]

[dependencies]
aifed-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
urlencoding = { workspace = true }
