[package]
name = "aifed-daemon"
edition = "2024"
version.workspace = true

[dependencies]
tokio = { workspace = true }
lsp-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
dirs = { workspace = true }
xxhash-rust = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
logroller = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
aifed-common = { path = "../aifed-common" }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
aifed-daemon-client = { path = "../aifed-daemon-client" }
aifed-common = { path = "../aifed-common" }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
