[package]
name = "aifed-daemon"
description = "Long-running background daemon for aifed: edit-history, concurrency tracking, and a local code index served over a Unix socket"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "lsp", "daemon", "editor"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
tokio = { workspace = true }
lsp-types = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
dirs = { workspace = true }
xxhash-rust = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
libc = { workspace = true }
logroller = { workspace = true }
anyhow = { workspace = true }
time = { workspace = true }
aifed-common = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tempfile = { workspace = true }
aifed-daemon-client = { workspace = true }
aifed-common = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
hyperlocal = { workspace = true }
http-body-util = { workspace = true }
serde_json = { workspace = true }
