[package]
name = "aifed"
edition = "2024"
version.workspace = true

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
aifed-daemon-client = { path = "../aifed-daemon-client" }
aifed-common = { path = "../aifed-common" }

[dev-dependencies]
tempfile = { workspace = true }
