[package]
name = "aifed"
edition = "2024"
version.workspace = true
description = "AI-first CLI text editor with safe edits and LSP-powered code operations"
license.workspace = true
repository = "https://github.com/ImitationGameLabs/aifed"
homepage = "https://github.com/ImitationGameLabs/aifed"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
json-escape = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
content_inspector = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-md = { workspace = true }
aifed-daemon-client = { path = "../aifed-daemon-client" }
aifed-common = { path = "../aifed-common" }

[dev-dependencies]
tempfile = { workspace = true }
