[package]
name = "aifed"
description = "AI-first CLI text editor with safe edits and LSP-powered code operations"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["ai", "agent", "editor", "cli", "lsp"]
categories = ["command-line-utilities", "development-tools", "text-editors"]

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
json-escape = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
content_inspector = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-go = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-javascript = { workspace = true }
tree-sitter-typescript = { workspace = true }
tree-sitter-c = { workspace = true }
tree-sitter-cpp = { workspace = true }
tree-sitter-md = { workspace = true }
aifed-daemon-client = { workspace = true }
aifed-common = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
